@@ -17,7 +17,9 @@
     <option value="option2">Test 2</option>
     </select>
     <input type="checkbox" value="0"/>
-    <input type="radio" value="Milk">
+    <input type="radio" value="Milk"/>
+    <input type="file"/>
+    
     <div>
         page-object rocks!
     </div>
