@@ -378,5 +378,20 @@ module PageObject
     def paragraph_element(identifier)
       platform.paragraph_for(identifier.clone)
     end
+
+        #
+    # Finds a paragraph
+    #
+    # @param [Hash] identifier how we find a paragraph.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :title => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    def file_field_element(identifier)
+      platform.file_field_for(identifier.clone)
+    end
   end
 end
