@@ -1,6 +1,7 @@
 === Version 0.5.4
 * Enhancements
   * Added deprecation warning to the method_missing method on Element.  Will be removed in 0.6
+  * Added full support for file_field element
 
 === Version 0.5.3
 * Enhancements
